<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ImcActivity">

    <!-- First a picture -->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/scale_bmi"
        android:contentDescription="@string/scale" />

    <!-- Weight input -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            android:text="@string/poids"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/activity_imc_weight_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="80"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/entrez_votre_poids_en_kg"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <!-- Size input -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            android:text="@string/taille"
            tools:layout_editor_absoluteX="96dp"
            tools:layout_editor_absoluteY="35dp" />

        <EditText
            android:id="@+id/activity_imc_size_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="80"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/entrez_votre_taille_en_m"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <!-- Date input -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            android:text="@string/date"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/activity_imc_date_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="80"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/date_hint"
            android:inputType="date" />
    </LinearLayout>

    <!-- Comment input -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            android:text="@string/comment"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/activity_imc_comment_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="80"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/comment_hint"
            android:inputType="text" />
    </LinearLayout>

    <!-- Result -->
    <TextView
        android:id="@+id/activity_imc_result_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:padding="15dp"

        android:text=""
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="96dp"
        tools:layout_editor_absoluteY="35dp" />

    <!-- BMI button -->
    <Button
        android:id="@+id/activity_imc_compute_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/calculez_votre_imc" />

    <!-- Clear button -->
    <Button
        android:id="@+id/activity_imc_clear_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/raz" />

    <!-- Store button -->
    <Button
        android:id="@+id/activity_imc_store_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/store" />
</LinearLayout>

</ScrollView>