<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ImcActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/poids" />

    <EditText
        android:id="@+id/activity_main_weight_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/entrez_votre_poids_en_kg"
        android:inputType="numberDecimal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/taille"
        tools:layout_editor_absoluteX="96dp"
        tools:layout_editor_absoluteY="35dp" />

    <EditText
        android:id="@+id/activity_main_size_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/entrez_votre_taille_en_m"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/activity_main_result_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:padding="30dp"

        android:text=""
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="96dp"
        tools:layout_editor_absoluteY="35dp" />

    <Button
        android:id="@+id/activity_main_compute_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/calculez_votre_imc" />

    <Button
        android:id="@+id/activity_main_clear_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/raz" />

</LinearLayout>