<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ImcActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/scale_bmi"
        android:contentDescription="@string/scale" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="15"
            android:text="@string/poids"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/activity_main_weight_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="85"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/entrez_votre_poids_en_kg"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="15"
            android:text="@string/taille"
            tools:layout_editor_absoluteX="96dp"
            tools:layout_editor_absoluteY="35dp" />

        <EditText
            android:id="@+id/activity_main_size_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="85"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/entrez_votre_taille_en_m"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <TextView
        android:id="@+id/activity_main_result_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:padding="15dp"

        android:text=""
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="96dp"
        tools:layout_editor_absoluteY="35dp" />

    <Button
        android:id="@+id/activity_main_compute_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/calculez_votre_imc" />

    <Button
        android:id="@+id/activity_main_clear_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/raz" />

</LinearLayout>