<?xml version="1.0" encoding="utf-8"?>



<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".controller.ImcActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/imc_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:layout_constraintTop_toTopOf="parent"/>

        <!-- User name -->
        <TextView
            android:id="@+id/activity_imc_name"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/turlututu"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imc_toolbar"
             />

        <!-- Picture -->
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/scale"
            android:src="@drawable/scale_bmi"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_imc_name" />

        <!-- Weight input -->
        <TextView
            android:id="@+id/weight_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/poids"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/activity_imc_weight_input"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/entrez_votre_poids_en_kg"
            android:inputType="numberDecimal"
            app:layout_constraintBottom_toBottomOf="@+id/weight_label"
            app:layout_constraintTop_toTopOf="@+id/weight_label"
            app:layout_constraintStart_toEndOf="@id/barrier3" />

        <!-- Size input -->
        <TextView
            android:id="@+id/size_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/taille"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_imc_weight_input" />

        <EditText
            android:id="@+id/activity_imc_size_input"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/entrez_votre_taille_en_m"
            android:inputType="numberDecimal"
            app:layout_constraintBottom_toBottomOf="@+id/size_label"
            app:layout_constraintStart_toEndOf="@id/barrier3"
            app:layout_constraintTop_toTopOf="@+id/size_label" />

        <!-- Date input -->
        <TextView
            android:id="@+id/date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/date"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_imc_size_input" />

        <EditText
            android:id="@+id/activity_imc_date_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="80"
            android:ems="10"
            android:hint="@string/date_hint"
            android:inputType="date"
            app:layout_constraintBottom_toBottomOf="@+id/date_label"
            app:layout_constraintTop_toTopOf="@+id/date_label"
            app:layout_constraintStart_toEndOf="@id/barrier3" />

        <!-- Comment input -->
        <TextView
            android:id="@+id/comment_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/comment"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_imc_date_input" />

        <EditText
            android:id="@+id/activity_imc_comment_input"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/comment_hint"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="@+id/comment_label"
            app:layout_constraintTop_toTopOf="@+id/comment_label"
            app:layout_constraintStart_toEndOf="@id/barrier3"/>

        <!-- Result -->
        <TextView
            android:id="@+id/activity_imc_result_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"

            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:padding="15dp"
            android:text=""
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_imc_comment_input" />

        <!-- BMI button -->
        <Button
            android:id="@+id/activity_imc_compute_button"
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/calculez_votre_imc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_imc_result_text" />

        <!-- Clear button -->
        <Button
            android:id="@+id/activity_imc_clear_button"
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/raz"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_imc_compute_button" />

        <!-- Store button -->
        <Button
            android:id="@+id/activity_imc_store_button"
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="storeRecord"
            android:text="@string/store"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_imc_clear_button" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="right"
            app:constraint_referenced_ids="size_label,weight_label,date_label,comment_label"
            tools:layout_editor_absoluteX="8dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>